<?xml version="1.0"?>
<package>
    <name>ExternalForcesEstimator</name>
    <version>0.1.0</version>
    <description>External forces measurment by combining residual based estimation and force sensor measurment</description>
    <maintainer email="mathieu.celerier.ing@gmail.com">Mathieu Célérier</maintainer>
    <license>BSD</license>
    <url type="repository"></url>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>hl_phri_exp</build_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>std_msgs</run_depend>
</package>